<resources>
    <string name="app_name">Shelter</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="register_employee">Employee</string>
    <string name="register_guest">Guest</string>
    <string name="people">People</string>
    <string name="dogs">Dogs</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="log_out">Log Out</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">gEhVE8kpHERfapcGugDzsFMgMuEIpz2vevznzGLe</string>
    <string name="back4app_client_key">qCdX41Wk0HQX5uX22xLshgxomwcwRgOmQwfSLOH8</string>
    <string name="title_activity_new_dog">NewDogActivity</string>
    <string name="add_new_dog">Add New Dog</string>
    <string-array name="building_array">
        <item>Isolation Building</item>
        <item>Skin Disease Building</item>
        <item>Old, Sick, or Disabled Area</item>
        <item>Small Dog Area 1</item>
        <item>Adoption Area</item>
        <item>Mid-size Dog Area 1</item>
        <item>Large Dog Area 1</item>
        <item>Large Dog Area 2</item>
        <item>Mid-size Dog Area 2</item>
        <item>Small Dog Area 2</item>
        <item>Mid-size Dog Area 3</item>
    </string-array>
    <string-array name="dog_array">
        <item>d1</item>
        <item>d2</item>
    </string-array>
    <string-array name="volunteer_array">
        <item>g1</item>
        <item>g2</item>
    </string-array>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="add_new_event">Add New Event</string>
    <string-array name="hour_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="minute_array">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="title_activity_building">BuildingActivity</string>

</resources>
